--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "alexa-sdk": "^1.0.25",
     "aws-sdk": "^2.546.0",
+    "dotenv": "^8.1.0",
     "es6-promisify": "^6.0.2"
   }
 }
